@@ -712,8 +712,9 @@ This command lets the player dig a hole in the ground.  The hole is best \
 dug proper tools, but smaller ones can still be dug with hands and elbows. \
 The more often this command is used, the larger the hole will be.  Items \
 can be placed in the hole by the player who uses the hole, and filled back \
-in by anyone using the CLOSE command. A hole with items can be uncovered \
-by anyone by using the DIG command in the same room.
+in by anyone using the CLOSE command.  If a hole is not filled in when the \
+players leave, it will be filled in if empty, and hidden from view otherwise. \
+A hole with items can be uncovered by anyone by using the DIG command in the same room.
 
 DISEMBARK=\
 Command : DISEMBARK\n\r\
